[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'constrainedlr'
version = '0.0.8'
description = 'Constrained Linear Regression with sklearn-compatible API'
readme = 'README.md'
authors = [
  { name = 'Theodore Tsitsimis', email='th.tsitsimis@gmail.com' },
]
license = {file = 'LICENSE'}
requires-python = '>=3.8'
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.2.2",
  "cvxopt>=1.3.1",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]

[project.urls]
"Homepage" = "https://github.com/tsitsimis/constrainedlr"

#[tool.setuptools]
#py-modules = ["constrainedlr"]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
